# morning-tavern

./: .gitignore  readme.md
hostinit/: hostinit.sh  readme.md
my/: cleanpyc.py  my.py  my2.py
searchme/: readme.md  searchme  searchme.conf
static/morning-tavern/tcping/: configure.ac
static/morning-tavern/tcping6/: Makefile.am  configure.ac
static/spec/: morning-tavern.spec  readme.md
static/tcping/: Makefile.am  configure.ac
tcping/: main.c  readme.md  tcping.c  tmp.c
tcping6/: readme.md  tcping6.c
